jobs/containers/svd-xt: Fix predict

--- a/jobs/containers/svd-xt/cog.yaml
+++ b/jobs/containers/svd-xt/cog.yaml
@@ -3,9 +3,13 @@ build:
 
   python_version: "3.11"
 
+  system_packages:
+    - ffmpeg
+
   python_packages:
     - diffusers
     - transformers
     - accelerate
+    - opencv-python
 
 predict: "predict.py:Predictor"
