--- a/jobs/containers/svd-xt-film/cog.yaml
+++ b/jobs/containers/svd-xt-film/cog.yaml
@@ -1,6 +1,8 @@
 build:
   gpu: true
 
+  cuda: "12.1"
+
   python_version: "3.11"
 
   system_packages:
@@ -14,6 +16,14 @@ build:
     - torchaudio
     - tqdm
     - einops
+    - xformers>=0.0.22
+    - triton>=2.1.0
+    - ninja
 
+  run:
+    - command: curl -L -O https://github.com/chengzeyi/stable-fast/releases/download/v1.0.1/stable_fast-1.0.1+torch211cu121-cp311-cp311-manylinux2014_x86_64.whl
+    # If we install stable-fast under python_packages, for some reason it complains about `No module named 'torch'`
+    # even thought torch should be installed already
+    - command: pip install stable_fast-1.0.1+torch211cu121-cp311-cp311-manylinux2014_x86_64.whl
 
 predict: "predict.py:Predictor"
