ci: Only build runner image when code changes

--- a/.github/workflows/ai-runner-docker.yaml
+++ b/.github/workflows/ai-runner-docker.yaml
@@ -2,9 +2,13 @@ name: Build Docker image for ai-runner
 
 on:
   pull_request:
+    paths:
+      - "runner/**"
   push:
     branches:
       - main
+    paths:
+      - "runner/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
