chore(devContainers): prevent Docker rebuild on changes
This commit prevents the docker container to be rebuild when we change
the [Development Container
config](https://code.visualstudio.com/docs/devcontainers/containers).

--- a/.github/workflows/ai-runner-docker.yaml
+++ b/.github/workflows/ai-runner-docker.yaml
@@ -4,11 +4,13 @@ on:
   pull_request:
     paths:
       - "runner/**"
+      - "!runner/.devcontainer/**"
   push:
     branches:
       - main
     paths:
       - "runner/**"
+      - "!runner/.devcontainer/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
