--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -52,4 +52,4 @@ COPY app/ /app/app
 COPY images/ /app/images
 COPY bench.py /app/bench.py
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
