--- a/.github/ISSUE_TEMPLATE/model_request.yml
+++ b/.github/ISSUE_TEMPLATE/model_request.yml
@@ -12,13 +12,13 @@ body:
   - type: textarea
     attributes:
       label: Which model do you want us to add support for?
-      description: "I would like to request support for the following model: [model name]".
+      description: "I would like to request support for the following model: [model name]"
     validations:
       required: true
   - type: textarea
     attributes:
       label: Hugging Face model hub link
-      description: "Please provide a link to the model on the Hugging Face model hub".
+      description: "Please provide a link to the model on the Hugging Face model hub"
     validations:
       required: true
   - type: dropdown
@@ -35,7 +35,7 @@ body:
   - type: textarea
     attributes:
       label: Use Case
-      description: "Please describe why you want this model to be added. This will help us prioritize your request".
+      description: "Please describe why you want this model to be added. This will help us prioritize your request"
   - type: textarea
     attributes:
       label: Additional context
