--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: true
 contact_links:
   - name: Question
     url: https://discord.gg/livepeer
-    about: "Have a question? Join us in the "ai-video" channel on the Livepeer Discord server. We're here to help!"
+    about: "Have a question? Join us in the 'ai-video' channel on the Livepeer Discord server. We're here to help!"
