docs: improve general and development documentatation
This commit improves both the documentation and developer documentation
making it easier for developers to work with the AI worker and runner.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 .cog
-checkpoints
 cache
 __pycache__
 input
 output
+
+# AI Configuration files and model storage folders.
+aiModels.json
 models
+checkpoints
+
+# IDE
 .vscode
 *.code-workspace
-aiModels.json
