--- a/.github/workflows/ai-runner-docker.yaml
+++ b/.github/workflows/ai-runner-docker.yaml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - '*'
     paths:
       - "runner/**"
       - "!runner/.devcontainer/**"
