--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: true
 contact_links:
+  - name: Feature Request
+    url: https://livepeer-ai-spe.productlane.com/roadmap
+    about: "Got a new feature idea? Check our roadmap first. If it's not there, feel free to suggest it!"
   - name: Question
     url: https://discord.gg/livepeer
     about: "Have a question? Join us in the 'ai-video' channel on the Livepeer Discord server. We're here to help!"
