--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,7 +8,7 @@ contact_links:
     about: "Have a specific AI pipeline you want to see supported? Check our roadmap and suggest it if it's not there!"
   - name: Feature Request
     url: https://livepeer-ai-spe.productlane.com/roadmap
-    about: "Got a new feature idea? Check our roadmap first. Check our roadmap and suggest it if it's not there!"
+    about: "Got a new feature idea? Check our roadmap and suggest it if it's not there!"
   - name: Question
     url: https://discord.gg/livepeer
     about: "Have a question? Join us in the 'ai-video' channel on the Livepeer Discord server. We're here to help!"
