ci: add OpenAPI sync client payload
This commit adds the trigger commit to the repository-dispatch call.

--- a/.github/workflows/trigger-upstream-openapi-sync.yaml
+++ b/.github/workflows/trigger-upstream-openapi-sync.yaml
@@ -19,3 +19,4 @@ jobs:
           token: ${{ secrets.DOCS_TRIGGER_PAT }}
           repository: rickstaa/docs
           event-type: update-ai-openapi
+          client-payload: '{"sha": "${{ github.sha }}"}'
