ci: improve OpenAPI sync action syntax
This commit improve the OpenAPI sync action syntax.

--- a/.github/workflows/trigger-upstream-openapi-sync.yaml
+++ b/.github/workflows/trigger-upstream-openapi-sync.yaml
@@ -17,11 +17,11 @@ jobs:
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.DOCS_TRIGGER_PAT }}
-          repository: rickstaa/docs
+          repository: livepeer/docs
           event-type: update-ai-openapi
           client-payload: '{"sha": "${{ github.sha }}"}'
 
-      - name: Trigger docs AI OpenAPI spec update
+      - name: Trigger SDK generation
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.SDKS_TRIGGER_PAT }}
