minor changes to requirements

--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -1,13 +1,15 @@
 diffusers==0.29.2
 accelerate==0.30.1
-transformers==4.41.1
+transformers==4.43.1
 fastapi==0.111.0
 pydantic==2.7.2
 Pillow==10.3.0
 python-multipart==0.0.9
 uvicorn==0.30.0
-setuptools
-torch
+setuptools==71.1.0
+torch==2.4.0+cu121
+torchaudio==2.4.0+cu121
+torchvision==0.19.0+cu121
 huggingface_hub==0.23.2
 xformers==0.0.23
 triton>=2.1.0
