--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -7,9 +7,9 @@ Pillow==10.3.0
 python-multipart==0.0.9
 uvicorn==0.30.0
 setuptools==71.1.0
-torch==2.4.0+cu121
-torchaudio==2.4.0+cu121
-torchvision==0.19.0+cu121
+torch --index-url https://download.pytorch.org/whl/cu121
+torchvision --index-url https://download.pytorch.org/whl/cu121
+torchaudio --index-url https://download.pytorch.org/whl/cu121
 huggingface_hub==0.23.2
 xformers==0.0.23
 triton>=2.1.0
