--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -1,11 +1,15 @@
 diffusers==0.29.2
 accelerate==0.30.1
-transformers==4.41.1
+transformers==4.43.1
 fastapi==0.111.0
 pydantic==2.7.2
 Pillow==10.3.0
 python-multipart==0.0.9
 uvicorn==0.30.0
+setuptools==71.1.0
+torch --index-url https://download.pytorch.org/whl/cu121
+torchvision --index-url https://download.pytorch.org/whl/cu121
+torchaudio --index-url https://download.pytorch.org/whl/cu121
 huggingface_hub==0.23.2
 xformers==0.0.23
 triton>=2.1.0
@@ -17,3 +21,4 @@ numpy==1.26.4
 av==12.1.0
 sentencepiece== 0.2.0
 protobuf==5.27.2
+opencv-python==4.10.0.84
