--- a/.github/workflows/docker-create-ai-runner.yaml
+++ b/.github/workflows/docker-create-ai-runner.yaml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            livepeer/ai-runner
+            jjassonn69/ai-runner
           tags: |
             type=sha
             type=ref,event=pr
