--- a/.github/workflows/docker-create-ai-runner.yaml
+++ b/.github/workflows/docker-create-ai-runner.yaml
@@ -1,7 +1,7 @@
 name: Build Docker image for ai-runner
 
 on:
-  member:
+  check_run:
     paths:
       - "runner/**"
       - "!runner/.devcontainer/**"
