--- a/.github/workflows/docker-create-ai-runner.yaml
+++ b/.github/workflows/docker-create-ai-runner.yaml
@@ -1,10 +1,7 @@
 name: Build Docker image for ai-runner
 
 on:
-  check_run:
-    paths:
-      - "runner/**"
-      - "!runner/.devcontainer/**"
+  workflow_dispatch:
   push:
     branches:
       - main
