--- a/.github/workflows/ai-runner-docker.yaml
+++ b/.github/workflows/ai-runner-docker.yaml
@@ -1,7 +1,7 @@
 name: Build Docker image for ai-runner
 
 on:
-  check_run:
+  pull_request:
     paths:
       - "runner/**"
       - "!runner/.devcontainer/**"
@@ -13,7 +13,6 @@ on:
     paths:
       - "runner/**"
       - "!runner/.devcontainer/**"
-  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -22,6 +21,7 @@ concurrency:
 jobs:
   docker:
     name: Docker image generation
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
     permissions:
       packages: write
       contents: read
@@ -49,7 +49,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            jjassonn69/ai-runner
+            livepeer/ai-runner
           tags: |
             type=sha
             type=ref,event=pr
@@ -73,5 +73,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           file: "Dockerfile"
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=jjassonn69/build:cache
-          cache-to: type=registry,ref=jjassonn69/build:cache,mode=max
+          cache-from: type=registry,ref=livepeerci/build:cache
+          cache-to: type=registry,ref=livepeerci/build:cache,mode=max
