--- a/.github/workflows/trigger-upstream-openapi-sync.yaml
+++ b/.github/workflows/trigger-upstream-openapi-sync.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.DOCS_TRIGGER_PAT }}
-          repository: livepeer/docs
+          repository: rickstaa/docs
           event-type: update-ai-openapi
           client-payload: '{"sha": "${{ github.sha }}"}'
 
