--- a/runner/docker/Dockerfile.segment_anything_2
+++ b/runner/docker/Dockerfile.segment_anything_2
@@ -1,4 +1,5 @@
-FROM livepeer/ai-runner:base
+ARG BASE_IMAGE=livepeer/ai-runner:base
+FROM ${BASE_IMAGE}
 
 RUN pip install --no-cache-dir torch==2.3.1 torchvision==0.18.1 torchaudio==2.3.1 xformers==0.0.27 git+https://github.com/facebookresearch/segment-anything-2.git@main#egg=sam-2
 
