--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -1,4 +1,4 @@
-name: Build ai-runner base Docker image
+name: Build ai-runner pipeline Docker images
 
 on:
   pull_request:
@@ -19,8 +19,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  docker:
-    name: Docker image generation
+  sam2-docker:
+    name: SAM2 Docker image generation
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
     permissions:
       packages: write
@@ -51,19 +51,18 @@ jobs:
           images: |
             livepeer/ai-runner
           tags: |
-            type=sha
-            type=ref,event=pr
-            type=ref,event=tag
-            type=sha,format=long
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{version}},prefix=v
-            type=semver,pattern={{major}}.{{minor}},prefix=v
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=base,enable={{is_default_branch}}
-            type=raw,value=${{ github.event.pull_request.head.ref }}
-            type=raw,value=stable,enable=${{ startsWith(github.event.ref, 'refs/tags/v') }}
+            type=sha,prefix=sam2-
+            type=ref,event=pr,prefix=sam2-
+            type=ref,event=tag,prefix=sam2-
+            type=sha,format=long,prefix=sam2-
+            type=ref,event=branch,prefix=sam2-
+            type=semver,pattern={{version}},prefix=sam2-
+            type=semver,pattern={{major}}.{{minor}},prefix=sam2-
+            type=semver,pattern={{version}},prefix=sam2-v
+            type=semver,pattern={{major}}.{{minor}},prefix=sam2-v
+            type=raw,value=latest,enable={{is_default_branch}},prefix=sam2-
+            type=raw,value=${{ github.event.pull_request.head.ref }},prefix=sam2-
+            type=raw,value=stable,enable=${{ startsWith(github.event.ref, 'refs/tags/v') }},prefix=sam2-
 
       - name: Build and push runner docker image
         uses: docker/build-push-action@v5
@@ -73,6 +72,18 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           file: "Dockerfile"
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=livepeerci/build:cache
+          cache-to: type=registry,ref=livepeerci/build:cache,mode=max
+      
+      - name: Build and push runner docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: "{{defaultContext}}:runner"
+          platforms: linux/amd64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          file: "docker/Dockerfile.segment_anything_2"
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=livepeerci/build:cache
           cache-to: type=registry,ref=livepeerci/build:cache,mode=max
