--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -25,7 +25,7 @@ jobs:
     permissions:
       packages: write
       contents: read
-    runs-on: oxford
+    runs-on: ubuntu-20.04
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
@@ -34,6 +34,15 @@ jobs:
           # Check https://github.com/livepeer/go-livepeer/pull/1891
           # for ref value discussion
           ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Cleanup hosted runner
+        run: |
+          sudo apt purge -yqq dotnet-* mono-* llvm-* libllvm* powershell* openjdk-* \
+          temurin-* mongodb-* firefox mysql-* \
+          hhvm google-chrome-stable \
+          libgl1-mesa-dri microsoft-edge-stable azure-cli || true
+          sudo apt autoremove -y
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
