--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -1,6 +1,6 @@
 diffusers==0.30.0
 accelerate==0.30.1
-transformers==4.41.1
+transformers==4.43.0
 fastapi==0.111.0
 pydantic==2.7.2
 Pillow==10.3.0
@@ -9,11 +9,12 @@ uvicorn==0.30.0
 huggingface_hub==0.23.2
 xformers==0.0.23
 triton>=2.1.0
-peft==0.11.1
-deepcache==0.1.1
+peft
+deepcache
 safetensors==0.4.3
 scipy==1.13.0
 numpy==1.26.4
 av==12.1.0
 sentencepiece== 0.2.0
 protobuf==5.27.2
+
