--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -1,3 +1,7 @@
+--extra-index-url https://download.pytorch.org/whl/cu12.6
+torch
+torchvision==0.18.0
+torchaudio==2.3.0
 diffusers==0.30.0
 accelerate==0.30.1
 transformers==4.41.1
@@ -7,7 +11,7 @@ Pillow==10.3.0
 python-multipart==0.0.9
 uvicorn==0.30.0
 huggingface_hub==0.23.2
-xformers==0.0.23
+xformers
 triton>=2.1.0
 peft==0.11.1
 deepcache==0.1.1
@@ -15,7 +19,7 @@ safetensors==0.4.3
 scipy==1.13.1
 numpy==1.26.4
 av==12.1.0
-sentencepiece== 0.2.0
+sentencepiece==0.2.0
 protobuf==5.27.2
 opencv-python
 https://github.com/JJassonn69/liveportrait/releases/download/liveportrait/liveportrait-0.1.0-py3-none-any.whl
