--- a/runner/requirements.txt
+++ b/runner/requirements.txt
@@ -1,6 +1,6 @@
 diffusers==0.30.0
 accelerate==0.30.1
-transformers==4.41.1
+transformers==4.43.3
 fastapi==0.111.0
 pydantic==2.7.2
 Pillow==10.3.0
@@ -17,3 +17,5 @@ numpy==1.26.4
 av==12.1.0
 sentencepiece== 0.2.0
 protobuf==5.27.2
+bitsandbytes==0.43.3
+psutil==6.0.0
