--- a/runner/docker/Dockerfile.multimedia
+++ b/runner/docker/Dockerfile.multimedia
@@ -45,3 +45,39 @@ RUN cd ffmpeg && \
     make -j$(nproc) && \
     make install && \
     make distclean
+
+
+
+# Install necessary dependencies
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    libgstreamer1.0-dev \
+    libgstreamer-plugins-base1.0-dev \
+    libgstreamer-plugins-bad1.0-dev \
+    gstreamer1.0-plugins-base \
+    gstreamer1.0-plugins-good \
+    gstreamer1.0-plugins-bad \
+    gstreamer1.0-plugins-ugly \
+    gstreamer1.0-libav \
+    gstreamer1.0-tools \
+    gstreamer1.0-x \
+    gstreamer1.0-alsa \
+    gstreamer1.0-gl \
+    gstreamer1.0-gtk3 \
+    gstreamer1.0-qt5 \
+    gstreamer1.0-pulseaudio \
+    libgstrtspserver-1.0-dev \
+    libgirepository1.0-dev \
+    python3-gst-1.0
+
+# Install NVIDIA codec libraries for hardware acceleration
+# Note: The exact package names might vary depending on your NVIDIA driver version
+RUN apt-get install -y --no-install-recommends \
+    libnvidia-decode-535-server \
+    libnvidia-encode-535-server 
+
+# Clean up APT cache to reduce image size
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Set environment variables for GStreamer
+ENV GST_PLUGIN_PATH=/usr/lib/x86_64-linux-gnu/gstreamer-1.0
+ENV GST_PLUGIN_SCANNER=/usr/lib/x86_64-linux-gnu/gstreamer1.0/gstreamer-1.0/gst-plugin-scanner
