--- a/runner/docker/Dockerfile.multimedia
+++ b/runner/docker/Dockerfile.multimedia
@@ -46,7 +46,8 @@ RUN cd ffmpeg && \
     make install && \
     make distclean
 
-
+# Copy the compiled FFmpeg binaries to /usr/local
+RUN cp -R /compiled/* /usr/local/
 
 # Install necessary dependencies
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
